mnist.3463526.err
Traceback (most recent call last):
  File "/home/shadiman/Deformable-3D-Gaussians/train_tree.py", line 19, in <module>
    from gaussian_renderer import render, network_gui, render_foveated
  File "/home/shadiman/Deformable-3D-Gaussians/gaussian_renderer/__init__.py", line 260
    ds_all = torch.cat([x[3] if isinstance(x[3], torch.Tensor) else torch.zeros((x[0].shape[0], 3), device=device)) for x in indices_layers], dim=0)
                                                                                                                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
Traceback (most recent call last):
  File "/home/shadiman/Deformable-3D-Gaussians/render.py", line 17, in <module>
    from gaussian_renderer import render, render_foveated
  File "/home/shadiman/Deformable-3D-Gaussians/gaussian_renderer/__init__.py", line 260
    ds_all = torch.cat([x[3] if isinstance(x[3], torch.Tensor) else torch.zeros((x[0].shape[0], 3), device=device)) for x in indices_layers], dim=0)
                                                                                                                  ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['
/home/shadiman/pytorch-env/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.
  warnings.warn(
/home/shadiman/pytorch-env/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=VGG16_Weights.IMAGENET1K_V1`. You can also use `weights=VGG16_Weights.DEFAULT` to get the most up-to-date weights.
  warnings.warn(msg)
Metric evaluation progress:   0%|          | 0/20 [00:00<?, ?it/s]Metric evaluation progress:   5%|▌         | 1/20 [00:01<00:24,  1.28s/it]Metric evaluation progress:  40%|████      | 8/20 [00:01<00:01,  7.62it/s]Metric evaluation progress:  70%|███████   | 14/20 [00:01<00:00, 14.01it/s]Metric evaluation progress: 100%|██████████| 20/20 [00:01<00:00, 20.75it/s]Metric evaluation progress: 100%|██████████| 20/20 [00:01<00:00, 12.47it/s]
Metric evaluation progress:   0%|          | 0/20 [00:00<?, ?it/s]Metric evaluation progress:  35%|███▌      | 7/20 [00:00<00:00, 64.70it/s]Metric evaluation progress:  70%|███████   | 14/20 [00:00<00:00, 60.25it/s]Metric evaluation progress: 100%|██████████| 20/20 [00:00<00:00, 59.73it/s]
